 - Qt: Fix audio context holding onto closed game controller
 - Switch: Fix gyroscope orientation (fixes mgba.io/i/1300)
 - GBA SIO: Prevent writing read-only multiplayer bits
 - Qt: Fix color picking in sprite view (fixes mgba.io/i/1307)
 - GB: Fix crash when accessing SRAM if no save loaded and cartridge has no SRAM
Misc:
 - GBA Savedata: EEPROM performance fixes
 - GBA Savedata: Automatically map 1Mbit Flash files as 1Mbit Flash
 - GB Memory: Support running from blocked memory
 - Qt: Don't unload ROM immediately if it crashes
 - GBA Video: Improve sprite cycle counting (fixes mgba.io/i/1274)
 - Debugger: Add breakpoint and watchpoint listing

0.7.0: (2019-01-26)
Features:
 - ELF support
 - Game Boy Camera support
 - Qt: Set default Game Boy colors
 - Game Boy Printer support
 - Super Game Boy support
 - Customizable autofire speed
 - Ability to set default Game Boy model
 - Map viewer
 - Automatic cheat loading and saving
 - GameShark and Action Replay button support
 - AGBPrint support
 - Debugger: Conditional breakpoints and watchpoints
 - Ability to select GB/GBC/SGB BIOS on console ports
 - Optional automatic state saving/loading
 - Access to ur0 and uma0 partitions on the Vita
 - Partial support for MBC6, MMM01, TAMA and HuC-1 GB mappers
 - GBA: ARMIPS/A22i-style and ELF symbol table support
 - Initial Switch port
Bugfixes:
 - ARM: Fix MSR when T bit is set
 - Core: Fix audio sync breaking when interrupted
 - Core: Fix ordering events when scheduling during events
 - FFmpeg: Fix encoding audio/video queue issues
 - GB: Revamp IRQ handling based on new information
 - GB: Fix IRQ disabling on the same T-cycle as an assert
 - GB Audio: Make audio unsigned with bias (fixes mgba.io/i/749)
 - GB Audio: Clock frame events on DIV
 - GB Audio: Fix channel 3 reset value
 - GB Audio: Fix channel 4 initial LFSR
 - GB Audio: Fix channel 1, 2 and 4 reset timing
 - GB I/O: DMA register is R/W
 - GB MBC: Improve multicart detection heuristic (fixes mgba.io/i/1177)